# weather_forecast_parser

./: CMakeLists.txt  main.cpp
DailyForecast/: CMakeLists.txt  DailyForecast.cpp  DailyForecast.h
Parsing/: CMakeLists.txt  Parsing.cpp  Parsing.h
WeatherForecast/: CMakeLists.txt  WeatherForecast.cpp  WeatherForecast.h
